--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.5.0'
 	id 'io.spring.dependency-management' version '1.1.7'
+	id 'com.google.cloud.tools.jib' version '3.4.0'
 }
 
 group = 'com.assignment'
@@ -22,4 +23,15 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'com.mysql:mysql-connector-j:8.3.0'
+}
+
+jib {
+    to {
+        image = project.hasProperty("imageName") 
+        tags = ['latest']
+    }
+    container {
+        jvmFlags = ['-Xms512m', '-Xmx512m']
+        ports = ['80']
+    }
 }
