--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,35 +1,18 @@
 version: 0.2
-env:
-  variables:
-    IMAGE_REPO_NAME: "springboot-app"
-    AWS_REGION: "ap-south-1"
+
+
 phases:
   install:
     runtime-versions:
       java: corretto17
     commands:
-      - echo Installing Gradle...
-      - chmod +x gradlew
-
-  pre_build:
-    commands:
-      - echo Logging in to Amazon ECR...
-      - aws --version
-      - $(aws ecr get-login --no-include-email --region $AWS_REGION)
-      - REPOSITORY_URI=$REPOSITORY_URI # Replaced in CDK
-      - IMAGE_TAG=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
-
+      - echo "Installing dependencies..."
+      - chmod +x ./gradlew
   build:
     commands:
-      - echo Building Docker image...
-      - docker build -t $REPOSITORY_URI:$IMAGE_TAG .
-  post_build:
-    artifacts:
-      files:
-        - build/reports/problems/problems-report.html
-    commands:
-      - echo Pushing Docker image...
-      - docker push $REPOSITORY_URI:$IMAGE_TAG
-artifacts:
-  files: '**/*'
+      - echo "Building and pushing image with Jib..."
+      - ./gradlew jib --image=$IMAGE_NAME
 
+artifacts:
+  files:
+    - '**/*'
