--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,10 @@ jib {
     to {
         image = System.getenv("IMAGE_NAME") ?: "my-springboot-app:latest"
         tags = ['latest']
+		auth {
+			username = System.getenv('AWS_ECR_USER')
+			password = System.getenv('AWS_ECR_PASSWORD')
+		}
     }
     container {
         jvmFlags = ['-Xms512m', '-Xmx512m']
