--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
 	id 'org.springframework.boot' version '3.5.0'
 	id 'io.spring.dependency-management' version '1.1.7'
 	id 'com.google.cloud.tools.jib' version '3.4.5'
+	id 'application'
 }
 
 group = 'com.assignment'
@@ -13,7 +14,9 @@ java {
 		languageVersion = JavaLanguageVersion.of(17)
 	}
 }
-
+application {
+	mainClass = 'com.assignment.AssignmentApplication'
+}
 repositories {
 	mavenCentral()
 }
